<resources>
    <string name="app_name">MAP_Game</string>
    <string name="title_activity_maps">BC_MAP</string>
    <string name="title_activity_profile">profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="marker">marker</string>
    <string name="owner">這地標還未被佔領</string>
    <string name="record">該地標沒有紀錄</string>
    <string name="protect">防禦</string>
    <string name="occupy">佔領</string>

    <string name="menu_home">佔領地標</string>
    <string name="menu_map">地圖</string>
    <string name="menu_gallery">購買道具</string>
    <string name="menu_token">剩餘代幣</string>
    <string name="menu_slideshow">遊戲規則</string>
    <string name="menu_logout">登出</string>

    <string name="home_second">Home Second</string>
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="login">登入</string>
</resources>
