<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="50dp"
        app:layout_behavior="com.google.android.material:material:1.2.0-alpha02"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/nav_header_desc"
                    android:src="@drawable/avatar_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/marker"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/marker_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:text="@string/owner"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/marker"
                        android:textAlignment="center"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="地標價值："
                    android:textColor="@color/saddlebrown"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/life"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="生命："
                    android:textColor="@color/saddlebrown"
                    android:textSize="20sp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="擁有者地址："
                android:textColor="@color/saddlebrown"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/owner"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/alliance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="陣營：綠色"
                android:textColor="@color/saddlebrown"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="紀錄："
                android:textColor="@color/saddlebrown"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/record"
                android:textSize="15sp" />

            <Button
                android:id="@+id/occupy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/occupy"
                android:textColor="#456132"
                android:textSize="20sp" />

            <Button
                android:id="@+id/protect_Action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/protect"
                android:textColor="#456132"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/attack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <Button
                    android:id="@+id/attack1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="毒藥"
                    android:textColor="#456132"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/attack2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="閃電"
                    android:textColor="#456132"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/attack3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="火球"
                    android:textColor="#456132"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/protect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <Button
                    android:id="@+id/protected1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="治癒"
                    android:textColor="#456132"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/protected2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="城牆"
                    android:textColor="#456132"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/protected3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="防禦塔"
                    android:textColor="#456132"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>